--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,15 @@
+button {
+  margin: 5px;
+  border: none;
+  background-color: grey;
+  border-radius: 5px;
+}
 #gifGallery div {
   display: inline-block;
 }
 .activeTopic {
   background-color: red;
+}
+.pictureFrame {
+  margin: 5px;
 }
