--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,36 @@
+body {
+  background-color: #efefef;
+  font-family: "Jua";
+}
 button {
   margin: 5px;
   border: none;
-  background-color: grey;
+  background-color: #a9a9a9;
   border-radius: 5px;
 }
 #gifGallery div {
   display: inline-block;
+  background-color: #caebf2;
+  border-radius: 10px;
+  padding: 10px;
+  font-family: "Comfortaa";
+
+}
+#gifGallery h2 {
+  font-size: 30px;
+}
+#gifGallery img {
+  border-radius: 10px;
+}
+#newTopics {
+  border-radius: 10px;
+  border: none;
+  padding-left: 10px;
 }
 .activeTopic {
-  background-color: red;
+  background-color: #ff3b3f;
 }
 .pictureFrame {
   margin: 5px;
+  border-color: #a9a9a9;
 }
